force-app/main/default/objects/Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders_Account</relationshipLabel>
    <relationshipName>Orders_Account</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>