force-app/main/default/objects/Order__c/fields/Actual_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Dispatch_Date__c</fullName>
    <label>Actual Dispatch Date</label>
    <type>Date</type>
</CustomField>