force-app/main/default/objects/Order__c/fields/Billing_Location__c.field-meta.xml
<CustomField>
    <fullName>Billing_Location__c</fullName>
    <label>Billing Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>