force-app/main/default/objects/Order__c/fields/Commisioned_By__c.field-meta.xml
<CustomField>
    <fullName>Commisioned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commisioned By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders_Commisioned_By</relationshipName>
    <type>Lookup</type>
</CustomField>