force-app/main/default/objects/Order__c/fields/Commissioning_Location__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Location__c</fullName>
    <label>Commissioning Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>