force-app/main/default/objects/Order__c/fields/Commissioning_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Remarks__c</fullName>
    <label>Commissioning Remarks</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>