force-app/main/default/objects/Order__c/fields/Commissioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Status__c</fullName>
    <label>Commissioning Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Commisioned</fullName>
            </value>
            <value>
                <fullName>Hand Over</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>