force-app/main/default/objects/Order__c/fields/Expected_Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Dispatch_Date__c</fullName>
    <label>Expected Dispatch Date</label>
    <type>Date</type>
</CustomField>