force-app/main/default/objects/Order__c/fields/Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error__c</fullName>
    <label>Integration Error</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>