force-app/main/default/objects/Order__c/fields/Is_Sent_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>Is_Sent_to_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sent to SAP</label>
    <type>Checkbox</type>
</CustomField>