force-app/main/default/objects/Order__c/fields/Net_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Order_Value__c</fullName>
    <formula>Subtotal_Amount__c - Discount_Amount__c + Shipping_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>