force-app/main/default/objects/Order__c/fields/Order_Amount_Num__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_Num__c</fullName>
    <label>Order Amount (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>