force-app/main/default/objects/Order__c/fields/Order_Owner__c.field-meta.xml
<CustomField>
    <fullName>Order_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>