force-app/main/default/objects/Order__c/fields/Order_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Sync_Status__c</fullName>
    <label>Order Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>