force-app/main/default/objects/Order__c/fields/Paying_Authority_Account__c.field-meta.xml
<CustomField>
    <fullName>Paying_Authority_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paying Authority Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders_Paying_Authority_Account</relationshipName>
    <type>Lookup</type>
</CustomField>