force-app/main/default/objects/Order__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Price_book__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders_Price_Book</relationshipName>
    <type>Lookup</type>
</CustomField>