force-app/main/default/objects/Order__c/fields/Ship_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders_Ship_to_Account</relationshipName>
    <type>Lookup</type>
</CustomField>