force-app/main/default/objects/Order__c/fields/Shipping_Location__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Location__c</fullName>
    <label>Shipping Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>