force-app/main/default/objects/Order__c/fields/Warehouse_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Plant_Code__c</fullName>
    <label>Warehouse / Plant Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>