force-app/main/default/objects/Order__c/fields/Warranty_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Valid_Till__c</fullName>
    <label>Warranty Valid Till</label>
    <type>Date</type>
</CustomField>